feat: anvil test

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,3 +37,8 @@ jobs:
         run: |
           ./${{ matrix.anvilw }} build
         shell: bash
+
+      - name: Anvil Test
+        run: |
+          ./${{ matrix.anvilw }} test
+        shell: bash
